# ChangeLog for dev-lang/opendylan
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/opendylan/ChangeLog,v 1.14 2014/01/07 05:26:53 patrick Exp $

  07 Jan 2014; Patrick Lauer <patrick@gentoo.org> opendylan-9999.ebuild:
  Fixing -9999 ebuild for 2013.2 release

  20 Dec 2013; Patrick Lauer <patrick@gentoo.org> opendylan-9999.ebuild:
  Whitespace

  20 Dec 2013; Patrick Lauer <patrick@gentoo.org> opendylan-9999.ebuild:
  Fix -9999 ebuild a bit

*opendylan-2013.1-r1 (19 Nov 2013)

  19 Nov 2013; Patrick Lauer <patrick@gentoo.org> +opendylan-2013.1-r1.ebuild,
  -opendylan-2013.1.ebuild:
  Fix up boehm-gc dependency, build system fix was applied already upstream

  01 Aug 2013; Patrick Lauer <patrick@gentoo.org> -opendylan-2011.1-r1.ebuild,
  -opendylan-2012.1.ebuild:
  Remove old

*opendylan-2013.1 (12 Jul 2013)

  12 Jul 2013; Patrick Lauer <patrick@gentoo.org> +opendylan-2013.1.ebuild,
  opendylan-2012.1.ebuild:
  Bump

  08 Feb 2013; Patrick Lauer <patrick@gentoo.org> opendylan-2011.1-r1.ebuild,
  opendylan-2012.1.ebuild, opendylan-9999.ebuild:
  Make repoman more happy

*opendylan-2012.1 (08 Feb 2013)

  08 Feb 2013; Patrick Lauer <patrick@gentoo.org> +opendylan-2012.1.ebuild,
  opendylan-2011.1-r1.ebuild:
  Bump

  22 Oct 2012; Patrick Lauer <patrick@gentoo.org> opendylan-2011.1-r1.ebuild:
  Restricting mps dep

  22 Aug 2012; Patrick Lauer <patrick@gentoo.org> opendylan-2011.1-r1.ebuild:
  Adding x86, with lots of buildsystem hackery to make mps integration work

  22 Aug 2012; Patrick Lauer <patrick@gentoo.org> opendylan-9999.ebuild:
  Remove keywords from live ebuild

  21 Aug 2012; Patrick Lauer <patrick@gentoo.org> opendylan-2011.1-r1.ebuild,
  opendylan-9999.ebuild:
  Minor cleanups

*opendylan-9999 (21 Aug 2012)
*opendylan-2011.1-r1 (21 Aug 2012)

  21 Aug 2012; Patrick Lauer <patrick@gentoo.org> +opendylan-2011.1-r1.ebuild,
  +opendylan-9999.ebuild, -opendylan-2011.1.ebuild: