@@ -1,5 +1,7 @@
 DIST opendylan-2013.1-sources.tar.bz2 8441356 SHA256 69cb884d2d07a96a6793ec0f782566924e40aa8660256ddf94f0703c96f1edf5 SHA512 f5168bb9a4d2bcd372667406f2f07ed5972f3e773a5766c5f74421d6ffd10901a43cf9d6604ad2ae14d80f1b84e856f4fdca3e1546a87053939f470005a87a2f WHIRLPOOL ed6a4804c29399e65f3fbc2785f5909f3a649521de798452fb2e5ba34542806fc628383257d9198fa8338d8407c90be321d790ceffa0ee896c6ce0ceb347c528
+DIST opendylan-2013.2-sources.tar.bz2 9174284 SHA256 0bac4ca80d25f33a5bb06ebd8f0f1bf1fa6ae0000a8c0748bb5799e65986028d SHA512 f846a1d80f78b887815d2f2983314dbf6b5f424164dba9bc6ac456b40f31ab02aeb073a447df8f02b3fad6bcf6401a889abaac400d58db8e0adebcdd4e177a4d WHIRLPOOL ac6554e51b7e67af4adb13f34c8973a789816008ce071bac564dcc907e7f92e8b74d48d351023c2b80e36ec04e4018227b6dcde4f0e172a4a5debe81708589ac
 EBUILD opendylan-2013.1-r1.ebuild 3258 SHA256 35fcb165423be9871bde5d33568373d9fc9eb776f0b53a649bcfbc046b9498ae SHA512 bfde67f90d22895a832bcefdf3eca1d702eafa23534bd6c1cbc3f21d439c34215135974172b24bca33f9b6936a87abfdd79fcc4657b36229bfacab483cf0651b WHIRLPOOL 71915e3604ba3d5c01288db66ae068c39001ef147e312448c73ef37b756baf921e9b79b947ef0389aca3a3e62ef078d0e069e1f2f3e445b665347dda15addb71
+EBUILD opendylan-2013.2.ebuild 3357 SHA256 58cae314f89168d3146a7899a8fed24159974903d8e2170be52ee8bd8bf23710 SHA512 431b9a46ef5c57584231fbf969171a182c0611a1129669814bb2aaf6e9248e2c1ed3f4656cd8c9e37c50d99f49316ee2f8c22cde5ba5689755ebb54aab6a5ae4 WHIRLPOOL 2a7fdd843d249c3eb13f338994d15f880bc70f0c60120848926e2ae8907aeb089be10f60a4b5a4df18656d713f74413a612d1775551b53b0875cb6959a38654b
 EBUILD opendylan-9999.ebuild 1709 SHA256 aee06e26d27be3c4bfe897000e70e2c019df103c6f7c3a5306a4a4d3e8f2d096 SHA512 e1f3b3634b352a9825bf4d28bb68ca218990cbd6995afe145495d2587bf57008fdb1262a6616a10653c7b7d87ccc2e71c1539836093902096e15fc7635043ad2 WHIRLPOOL 27a5e8e354033f317e88477c70c72788860b5d92551cc70ad6a046e205480e683dab2d9526722245530a5058a4674bedc8036050fb29870394a095a8a35aff8b
-MISC ChangeLog 2185 SHA256 0cf22e75fe934a98467bb67dba401d877305f838be199fc1ac9fa32b44683f1b SHA512 4b5a309b1dca5d634a3e77015ec08580249cb16ce3b6d04c53fac523a0ec1ac5189b8bbf4f8beafdb4be438a6207ff4a14e174986411ed341008b7315e05f0f0 WHIRLPOOL a0cb2b6ea4a0b43431f990d2eef40dd0eb0731918a929a768600a40c275fd5c118df4bc259e45fc191db3adcee1012a3db1c0dd661daeece0a6a3bea8814ac99
+MISC ChangeLog 2302 SHA256 a336cd5bfa5499526fcd1953a3941db1f6483cba1d8e10704ea26a423b718367 SHA512 053732d70d1e7aa3f67cb9cff19577cb5e60a6589f9ddeccd2d098121d10566404b92de7af12e133443149e4d07d747bec0998a8401cbe6ce4953ba1f6f4ec3a WHIRLPOOL a3d8a56761363b35db6231757223c3565bcf75a84f59dfd2a40d6dd6133b1a325a6cbdc9205ca2613df2e8b44a1731de39f199342d8665db6e97b218e14c04f8
 MISC metadata.xml 233 SHA256 65209e280ca6de32a92e1a57301ff69fb3472e55ba07848d6f80405d35e92d47 SHA512 0d30bfb39315a04767e07896409f5d3954f8e954e20fcbac7b92bb9a636c9f61c50b1b2cf55e6c1db9a199a0edc159b5c8cc8f541efb9c4adafa28e3652cff7b WHIRLPOOL 027c5101e1cbc665c9d2ef240f73a874c9f49a9b70175c5947e012df61de484585088a46b6ce9078816e548e6bcc326e7223539cc999159eee2757d0a2eb1480
